Updated hours and description

--- a/index.html
+++ b/index.html
@@ -109,10 +109,7 @@
               Friday: 10:00 AM - 7:00 PM<br>
               Saturday: 8:00 AM - 2:00 PM<br>
               Sunday: Closed</p>
-            <!-- <p>Come Visit</p> -->
-            <!-- <p>M-F - 10am-7pm</p> -->
-            <!-- <p>Saturday - 8am-2pm</p> -->
-            <!-- <p>Barbers schedules vary - check booksy for specific times</p> -->
+              <p>Barber Schedules Vary - Check Booksy for Specific Times</p>
           </div>
         </div>
       </div>
