Updated Google Map iframe

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="row">
           <div class="col-lg-6">
             <h2 class="text-center p-2" id="location">Location</h2>
-            <iframe src="https://maps.google.com/maps?q=classics%20barbershop%20grandview" height=300 width="100%" frameborder="0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3056.8631457018746!2d-83.0476608842269!3d39.989163579417045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88388e5a956eaaab%3A0x5faa881bf90c156!2sClassics%20Barbershop!5e0!3m2!1sen!2sus!4v1654713708650!5m2!1sen!2sus" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
           <div class="col-lg-6">
             <h2 class="text-center p-2" id="hours">Hours</h2>
@@ -109,7 +109,7 @@
               Friday: 10:00 AM - 7:00 PM<br>
               Saturday: 8:00 AM - 2:00 PM<br>
               Sunday: Closed</p>
-              <p>Barber Schedules Vary - Check Booksy for Specific Times</p>
+              <p class="text-center">Barber Schedules Vary - Check Booksy for Specific Times</p>
           </div>
         </div>
       </div>
