Updated Phone Number Link

--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
             Contact
           </h6>
           <p><i class="fas fa-building me-3"></i>1462 W 5th Ave, Columbus, OH 43212, USA</p>
-          <p><i class="fas fa-phone me-3"></i>(614) 914-5668</p>
+          <p><i class="fas fa-phone me-3"></i><a href="tel:+16149145668">(614) 914-5668</a></p>
+          
         </div>
         <!-- Grid column -->
       </div>
