--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <nav class="navbar navbar-dark navbar-expand-lg bg-black">
         <div class="container-fluid">
-          <a class="navbar-brand" href="https://shaneking09.github.io/classicsbarbershop">
+          <a class="navbar-brand" href="#">
             <img class="d-inline-block" src="images/classics-black-crop.png" height="100" alt="Classics Barbershop Logo">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -182,7 +182,7 @@
   <!-- Copyright -->
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
     © 2022 Copyright:
-    <a class="text-reset fw-bold" href="https://classicsbarbershop614.com/">ClassicsBarbershop614.com</a>
+    <a class="text-reset fw-bold" href="https://www.classicsbarbershop614.com/">www.ClassicsBarbershop614.com</a>
   </div>
   <!-- Copyright -->
 </footer>
