--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <nav class="navbar navbar-dark navbar-expand-lg bg-black">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="https://www.classicsbarbershop614.com/">
             <img class="d-inline-block" src="images/classics-black-crop.png" height="100" alt="Classics Barbershop Logo">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
