--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="col-lg-4">
             <div class="card">
               <div class="card-body"></div>
-                <h3 class="card-title text-center pb-4">HAIRCUT & HEARD TRIM</h3>
+                <h3 class="card-title text-center pb-4">HAIRCUT & BEARD TRIM</h3>
               <img src="images/14-crop.jpg" class="card-img-bottom" alt="Haircut and Beard Trim">
             </div>
           </div>
